--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -33,16 +32,25 @@ android {
 }
 
 def lifecycle_arch_version = '2.2.0-rc02'
+def room_version = "2.2.2"
 
 dependencies {
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.core:core-ktx:1.1.0'
+
+    implementation "androidx.fragment:fragment-ktx:1.2.0-rc02"
+
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_arch_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_arch_version"
-    implementation "androidx.fragment:fragment-ktx:1.2.0-rc02"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_arch_version"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 }
