--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,16 +35,18 @@ def lifecycle_arch_version = '2.2.0-rc02'
 def room_version = "2.2.2"
 def moshi_version = "1.9.2"
 def retrofit_version = "2.6.2"
+def coroutines_version = '1.3.2'
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     implementation "androidx.fragment:fragment-ktx:1.2.0-rc02"
 
@@ -61,4 +63,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
+    implementation "androidx.work:work-runtime-ktx:2.2.0"
 }
