--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation "androidx.work:work-runtime-ktx:2.2.0"
 }
