--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ android:
     - android-29
     - sys-img-x86-android-29
 before_script:
-  - echo no | avdmanager create avd --force -n test -k 'system-images;android-29;x86_64'
+  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
