added android sdk version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: android
 dist: trusty
 android:
   components:
+    - android-20
     - build-tools-29.0.2
     - android-29
     - sys-img-x86-android-29
