--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: android
 dist: trusty
 android:
   components:
-    - android-20
-    - build-tools-29.0.2
     - android-29
+    - build-tools-29.0.2
     - sys-img-x86-android-29
 before_script:
+  - export ANDROID_HOME=~/android-sdk
   - echo no | android create avd --force -n test -t android-29 --abi x86 -c 100M
-  - emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-audio -no-window -memory 1500 -no-accel  &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script: ./gradlew build
